--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar >
-    <ion-title color="primary">Componentes</ion-title>
+    <ion-title color="primary">Principal Page Exam</ion-title>
   </ion-toolbar>
 </ion-header>
 
